<resources>
    <string name="app_name">Colorimétrico</string>
    <string-array name="texto_info">
        <item>Pasos para el uso de la aplicación.</item>
        <item>Una vez que se haya hecho la reacción con la tira reactiva...</item>
        <item>1.-Oprimir el icono de la cámara para tomar la foto de la tira reactiva o en su defecto, seleccionar una imagen de su galeria pulsando el icono siguiente.</item>
        <item>2.-Se mostrará la foto en el espacio de este texto.</item>
        <item>3.-Oprimir el botón de procesar imagen para poder calcular el nivel de glucosa.</item>
        <item>4.-El resultado se verá en la línea de abajo.</item>
        <item>5.-Oprimir el icono de información para saber en que rango se encuentra su nivel de glucosa.</item>
    </string-array>
    <string name="texto_inicio">Su nivel de glucosa es de:</string>
    <string name="btnprocess">Procesar imagen</string>
    <string name="rango_glucosa">Rangos de Glucosa:</string>
    <string name="rango_glucosa1">126 mg/dL o mayor</string>
    <string name="rango_glucosa2">De 101 mg/dL a 125 mg/dL</string>
    <string name="rango_glucosa3">De 70 mg/dL a 100 mg/dL</string>
    <string name="rango_glucosa4">Tiene Diabetes</string>
    <string name="rango_glucosa5">Intolerancia En Ayuno</string>
    <string name="rango_glucosa6">Su Glucosa Está Bien</string>
    <string name="medida">mg/dL</string>
    <string name="title_activity_splashscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>